--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .layout {
+    max-width: 82rem;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@layer utilities {
+  a {
+    @apply hover:text-cyan-500 hover:underline;
+  }
+}
