--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -596,13 +596,13 @@ select{
   outline: 1px auto -webkit-focus-ring-color;
 }
 
-a{
+#resume * a{
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
 }
 
-a:hover{
+#resume * a:hover{
   --tw-text-opacity: 1;
   color: rgb(6 182 212 / var(--tw-text-opacity));
   -webkit-text-decoration-line: underline;
@@ -842,7 +842,7 @@ a:hover{
 }
 
 .layout {
-  max-width: 82rem;
+  max-width: 72rem;
   width: 90%;
   margin-left: auto;
   margin-right: auto;
@@ -886,6 +886,21 @@ a:hover{
   margin-right: auto;
 }
 
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-20{
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.my-40{
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+}
+
 .mt-\[7\.8rem\]{
   margin-top: 7.8rem;
 }
@@ -926,6 +941,10 @@ a:hover{
   margin-top: 0px;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -952,6 +971,10 @@ a:hover{
 
 .hidden{
   display: none;
+}
+
+.h-96{
+  height: 24rem;
 }
 
 .h-full{
@@ -1086,6 +1109,11 @@ a:hover{
        column-gap: 5rem;
 }
 
+.gap-x-10{
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -1149,6 +1177,29 @@ a:hover{
   border-color: transparent;
 }
 
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-gray-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+
+.border-gray-100\/60{
+  border-color: rgb(243 244 246 / 0.6);
+}
+
+.border-gray-100\/50{
+  border-color: rgb(243 244 246 / 0.5);
+}
+
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1159,12 +1210,21 @@ a:hover{
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-gradient-to-br{
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-cyan-300{
+  --tw-gradient-from: #67e8f9;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(103 232 249 / 0));
 }
 
 .from-white\/80{
@@ -1177,12 +1237,73 @@ a:hover{
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(96 165 250 / 0));
 }
 
+.from-cyan-400{
+  --tw-gradient-from: #22d3ee;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(34 211 238 / 0));
+}
+
+.from-cyan-400\/90{
+  --tw-gradient-from: rgb(34 211 238 / 0.9);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(34 211 238 / 0));
+}
+
+.from-cyan-400\/95{
+  --tw-gradient-from: rgb(34 211 238 / 0.95);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(34 211 238 / 0));
+}
+
+.from-cyan-400\/60{
+  --tw-gradient-from: rgb(34 211 238 / 0.6);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(34 211 238 / 0));
+}
+
+.from-gray-50{
+  --tw-gradient-from: #f9fafb;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(249 250 251 / 0));
+}
+
+.via-cyan-400{
+  --tw-gradient-stops: var(--tw-gradient-from), #22d3ee, var(--tw-gradient-to, rgb(34 211 238 / 0));
+}
+
 .via-white\/75{
   --tw-gradient-stops: var(--tw-gradient-from), rgb(255 255 255 / 0.75), var(--tw-gradient-to, rgb(255 255 255 / 0));
 }
 
+.via-cyan-500{
+  --tw-gradient-stops: var(--tw-gradient-from), #06b6d4, var(--tw-gradient-to, rgb(6 182 212 / 0));
+}
+
+.via-cyan-500\/90{
+  --tw-gradient-stops: var(--tw-gradient-from), rgb(6 182 212 / 0.9), var(--tw-gradient-to, rgb(6 182 212 / 0));
+}
+
+.via-cyan-500\/80{
+  --tw-gradient-stops: var(--tw-gradient-from), rgb(6 182 212 / 0.8), var(--tw-gradient-to, rgb(6 182 212 / 0));
+}
+
+.to-cyan-400{
+  --tw-gradient-to: #22d3ee;
+}
+
 .to-blue-700{
   --tw-gradient-to: #1d4ed8;
+}
+
+.to-cyan-500{
+  --tw-gradient-to: #06b6d4;
+}
+
+.to-cyan-500\/90{
+  --tw-gradient-to: rgb(6 182 212 / 0.9);
+}
+
+.to-cyan-500\/75{
+  --tw-gradient-to: rgb(6 182 212 / 0.75);
+}
+
+.to-white{
+  --tw-gradient-to: #fff;
 }
 
 .bg-clip-text{
@@ -1225,12 +1346,34 @@ a:hover{
   padding-right: 0px;
 }
 
+.py-40{
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+.py-52{
+  padding-top: 13rem;
+  padding-bottom: 13rem;
+}
+
 .pt-10{
   padding-top: 2.5rem;
 }
 
 .pb-80{
   padding-bottom: 20rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
 }
 
 .text-center{
@@ -1249,14 +1392,14 @@ a:hover{
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-\[1\.7rem\]{
@@ -1288,6 +1431,11 @@ a:hover{
   line-height: 2rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-semibold{
   font-weight: 600;
 }
@@ -1304,8 +1452,28 @@ a:hover{
   text-transform: uppercase;
 }
 
+.lowercase{
+  text-transform: lowercase;
+}
+
 .italic{
   font-style: italic;
+}
+
+.leading-none{
+  line-height: 1;
+}
+
+.leading-\[-10px\]{
+  line-height: -10px;
+}
+
+.leading-\[-30px\]{
+  line-height: -30px;
+}
+
+.tracking-tight{
+  letter-spacing: -0.025em;
 }
 
 .tracking-tighter{
@@ -1316,6 +1484,11 @@ a:hover{
   letter-spacing: 0.05em;
 }
 
+.text-gray-100{
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
 .text-transparent{
   color: transparent;
 }
@@ -1323,6 +1496,11 @@ a:hover{
 .text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-gray-900{
@@ -1355,6 +1533,14 @@ a:hover{
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.text-gray-100\/70{
+  color: rgb(243 244 246 / 0.7);
+}
+
+.text-opacity-70{
+  --tw-text-opacity: 0.7;
+}
+
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1380,8 +1566,26 @@ a:hover{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.transition-opacity{
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-150{
+  transition-duration: 150ms;
+}
+
+.duration-200{
+  transition-duration: 200ms;
+}
+
 .text-shadow-sm{
   text-shadow: 1px 1px 3px rgb(36 37 47 / 25%);
+}
+
+.text-shadow-md{
+  text-shadow: 0px 1px 2px rgb(30 29 39 / 19%), 1px 2px 4px rgb(54 64 147 / 18%);
 }
 
 .selection\:bg-cyan-500\/75 *::-moz-selection{
@@ -1418,6 +1622,15 @@ a:hover{
 .selection\:text-white::selection{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-100:hover{
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
+.hover\:text-opacity-100:hover{
+  --tw-text-opacity: 1;
 }
 
 .focus\:border-indigo-300:focus{
