--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .layout {
-    max-width: 82rem;
+    max-width: 72rem;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
@@ -14,7 +14,7 @@
 }
 
 @layer base {
-  a {
+  #resume * a {
     @apply w-max hover:text-cyan-500 hover:underline;
   }
 }
