fixed html errors

--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -17,4 +17,8 @@
   #resume * a {
     @apply w-max hover:text-cyan-500 hover:underline;
   }
+
+  [x-cloak] {
+    display: none !important;
+  }
 }
