--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -6,7 +7,7 @@
 
 @layer components {
   .layout {
-    max-width: 72rem;
+    max-width: 64rem;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
