--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -940,6 +940,20 @@ select{
   margin-right: auto;
 }
 
+.link-underline {
+  border-bottom-width: 0;
+  background-image: linear-gradient(transparent, transparent), linear-gradient(#4338ca, #4338ca);
+  background-size: 0 2px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 0.5s ease-in-out;
+}
+
+.link-underline:hover {
+  background-size: 100% 2px;
+  background-position: 0 100%;
+}
+
 .static{
   position: static;
 }
@@ -994,6 +1008,10 @@ select{
   margin-top: 0.5rem;
 }
 
+.ml-auto{
+  margin-left: auto;
+}
+
 .mb-\[5px\]{
   margin-bottom: 5px;
 }
@@ -1020,10 +1038,6 @@ select{
 
 .mt-0{
   margin-top: 0px;
-}
-
-.ml-auto{
-  margin-left: auto;
 }
 
 .block{
@@ -1058,30 +1072,20 @@ select{
   height: 2.5rem;
 }
 
+.h-auto{
+  height: auto;
+}
+
+.h-6{
+  height: 1.5rem;
+}
+
 .h-full{
   height: 100%;
 }
 
 .h-24{
   height: 6rem;
-}
-
-.h-40{
-  height: 10rem;
-}
-
-.h-auto{
-  height: auto;
-}
-
-.h-max{
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-}
-
-.h-6{
-  height: 1.5rem;
 }
 
 .min-h-screen{
@@ -1092,8 +1096,8 @@ select{
   width: 87%;
 }
 
-.w-full{
-  width: 100%;
+.w-auto{
+  width: auto;
 }
 
 .w-max{
@@ -1102,16 +1106,12 @@ select{
   width: max-content;
 }
 
-.w-40{
-  width: 10rem;
-}
-
-.w-auto{
-  width: auto;
-}
-
 .w-6{
   width: 1.5rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .min-w-max{
@@ -1171,16 +1171,16 @@ select{
        columns: 2;
 }
 
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -1225,6 +1225,11 @@ select{
        column-gap: 3rem;
 }
 
+.gap-x-7{
+  -moz-column-gap: 1.75rem;
+       column-gap: 1.75rem;
+}
+
 .gap-y-2{
   row-gap: 0.5rem;
 }
@@ -1247,20 +1252,22 @@ select{
        column-gap: 5rem;
 }
 
-.gap-x-5{
-  -moz-column-gap: 1.25rem;
-       column-gap: 1.25rem;
-}
-
-.gap-x-7{
-  -moz-column-gap: 1.75rem;
-       column-gap: 1.75rem;
-}
-
 .space-x-5 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1.25rem * var(--tw-space-x-reverse));
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]){
@@ -1273,18 +1280,6 @@ select{
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1305,24 +1300,16 @@ select{
   border-radius: 9999px;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
 
 .rounded{
   border-radius: 0.25rem;
-}
-
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-
-.rounded-xl{
-  border-radius: 0.75rem;
 }
 
 .border-0{
@@ -1369,6 +1356,10 @@ select{
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
+.bg-gray-50\/60{
+  background-color: rgb(249 250 251 / 0.6);
+}
+
 .bg-indigo-500{
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
@@ -1382,15 +1373,6 @@ select{
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
-.bg-gray-50\/80{
-  background-color: rgb(249 250 251 / 0.8);
 }
 
 .bg-gray-50\/70{
@@ -1450,10 +1432,6 @@ select{
           background-clip: text;
 }
 
-.fill-current{
-  fill: currentColor;
-}
-
 .p-4{
   padding: 1rem;
 }
@@ -1473,11 +1451,6 @@ select{
   padding-bottom: 2.5rem;
 }
 
-.py-32{
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1486,11 +1459,6 @@ select{
 .px-7{
   padding-left: 1.75rem;
   padding-right: 1.75rem;
-}
-
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 
 .px-6{
@@ -1518,26 +1486,6 @@ select{
   padding-right: 0px;
 }
 
-.py-28{
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-1\.5{
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .pt-5{
   padding-top: 1.25rem;
 }
@@ -1546,24 +1494,20 @@ select{
   padding-bottom: 1.25rem;
 }
 
-.pt-10{
-  padding-top: 2.5rem;
-}
-
-.pb-80{
-  padding-bottom: 20rem;
-}
-
 .pt-28{
   padding-top: 7rem;
 }
 
-.pt-36{
-  padding-top: 9rem;
+.pt-10{
+  padding-top: 2.5rem;
 }
 
 .pt-40{
   padding-top: 10rem;
+}
+
+.pt-9{
+  padding-top: 2.25rem;
 }
 
 .pt-2{
@@ -1578,8 +1522,8 @@ select{
   padding-bottom: 0.5rem;
 }
 
-.pt-9{
-  padding-top: 2.25rem;
+.pb-80{
+  padding-bottom: 20rem;
 }
 
 .text-center{
@@ -1632,6 +1576,10 @@ select{
   line-height: 1;
 }
 
+.text-\[1\.075rem\]{
+  font-size: 1.075rem;
+}
+
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1640,19 +1588,6 @@ select{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-\[1\.1rem\]{
-  font-size: 1.1rem;
-}
-
-.text-\[1\.075rem\]{
-  font-size: 1.075rem;
 }
 
 .font-semibold{
@@ -1720,6 +1655,11 @@ select{
   color: rgb(79 70 229 / var(--tw-text-opacity));
 }
 
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -1728,11 +1668,6 @@ select{
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-black{
@@ -1759,15 +1694,15 @@ select{
   -moz-osx-font-smoothing: grayscale;
 }
 
-.shadow-sm{
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1864,8 +1799,9 @@ select{
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.hover\:fill-black:hover{
-  fill: #000;
+.hover\:text-2xl:hover{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .hover\:text-gray-100:hover{
@@ -1873,24 +1809,14 @@ select{
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
-.hover\:text-white:hover{
+.hover\:text-indigo-600:hover{
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-black:hover{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(79 70 229 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-900:hover{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.hover\:text-indigo-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
 }
 
 .hover\:text-opacity-100:hover{
@@ -1993,6 +1919,26 @@ select{
   --tw-ring-offset-width: 2px;
 }
 
+.active\:translate-x-2:active{
+  --tw-translate-x: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:translate-y-1:active{
+  --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:translate-y-0\.5:active{
+  --tw-translate-y: 0.125rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:translate-y-0:active{
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .active\:bg-indigo-700\/95:active{
   background-color: rgb(67 56 202 / 0.95);
 }
@@ -2005,6 +1951,11 @@ select{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.group:hover .group-hover\:text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 @media print{
