--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1526,6 +1526,14 @@ select{
   padding-bottom: 20rem;
 }
 
+.pt-32{
+  padding-top: 8rem;
+}
+
+.pt-44{
+  padding-top: 11rem;
+}
+
 .text-center{
   text-align: center;
 }
