--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -31,7 +32,7 @@
     @apply hover:text-cyan-500 hover:underline;
   }
   #resume * a:not(.italic) {
-    @apply w-max underline print:no-underline;
+    @apply underline w-max print:no-underline;
   }
 
   [x-cloak] {
