--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1979,6 +1979,10 @@ select{
   --tw-text-opacity: 1;
 }
 
+.hover\:\!underline:hover{
+  text-decoration-line: underline !important;
+}
+
 .hover\:shadow-lg:hover{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
