--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1209,6 +1209,86 @@ select{
   max-width: 780px;
 }
 
+.max-w-\[800px\]{
+  max-width: 800px;
+}
+
+.max-w-\[810px\]{
+  max-width: 810px;
+}
+
+.max-w-\[820px\]{
+  max-width: 820px;
+}
+
+.max-w-\[82px\]{
+  max-width: 82px;
+}
+
+.max-w-\[8\.5in\]{
+  max-width: 8.5in;
+}
+
+.max-w-\[8\.6in\]{
+  max-width: 8.6in;
+}
+
+.max-w-\[8\.7in\]{
+  max-width: 8.7in;
+}
+
+.max-w-\[8\.8in\]{
+  max-width: 8.8in;
+}
+
+.max-w-\[8\.9in\]{
+  max-width: 8.9in;
+}
+
+.max-w-\[9\.2in\]{
+  max-width: 9.2in;
+}
+
+.max-w-\[9\.3in\]{
+  max-width: 9.3in;
+}
+
+.max-w-\[9\.5in\]{
+  max-width: 9.5in;
+}
+
+.max-w-\[9\.8in\]{
+  max-width: 9.8in;
+}
+
+.max-w-\[9\.85in\]{
+  max-width: 9.85in;
+}
+
+.max-w-\[9\.825in\]{
+  max-width: 9.825in;
+}
+
+.max-w-\[9\.82in\]{
+  max-width: 9.82in;
+}
+
+.max-w-\[9\.79in\]{
+  max-width: 9.79in;
+}
+
+.max-w-\[9\.77in\]{
+  max-width: 9.77in;
+}
+
+.max-w-\[9\.76in\]{
+  max-width: 9.76in;
+}
+
+.max-w-\[9\.75in\]{
+  max-width: 9.75in;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -1526,6 +1606,19 @@ select{
   background-color: transparent;
 }
 
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-100\/80{
+  background-color: rgb(243 244 246 / 0.8);
+}
+
+.bg-gray-50\/80{
+  background-color: rgb(249 250 251 / 0.8);
+}
+
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1591,6 +1684,14 @@ select{
   padding: 1.25rem;
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-20{
+  padding: 5rem;
+}
+
 .px-0\.5{
   padding-left: 0.125rem;
   padding-right: 0.125rem;
@@ -1644,6 +1745,11 @@ select{
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 
 .pb-20{
@@ -1884,6 +1990,12 @@ select{
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2197,6 +2309,19 @@ select{
     row-gap: 3px;
   }
 
+  .print\:bg-transparent{
+    background-color: transparent;
+  }
+
+  .print\:bg-white{
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  }
+
+  .print\:p-0{
+    padding: 0px;
+  }
+
   .print\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -2231,5 +2356,11 @@ select{
   .print\:text-xs{
     font-size: 0.75rem;
     line-height: 1rem;
+  }
+
+  .print\:shadow-none{
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
